# federated-learning-prototype

./: .dockerignore  README.md  create_party_data.py  main.py  pyproject.toml  setup_venv.sh
config/: aggregator.yaml  party_1.yaml  party_2.yaml  party_3.yaml  party_template.yaml
docker/: Dockerfile.aggregator  Dockerfile.data_party  docker-compose.dev.yml  docker-compose.yml  manage.sh
docker/data_party/: Dockerfile.data_party
docs/: aggregator_pipeline.md  data_module.md  data_party_guide.md  docker_setup_guide.md  dp_module.md  implementation_guide.md  paillier_module.md  quick_start.md  trainer_module.md
src/: __init__.py
src/aggregator/: __init__.py  main.py  pipeline.py
src/communication/: __init__.py  generate_grpc.sh  grpc_client.py  grpc_server.py
src/communication/proto/: aggregator_service.proto
src/data_party/: __init__.py  main.py
src/dp/: __init__.py  aggregator.py  gaussian_mechanism.py  utils.py
src/models/: __init__.py  demo_trainer.py  trainer.py
src/smc/: __init__.py  demo_paillier.py  paillier.py
src/utils/: __init__.py  data_loader.py
tests/: __init__.py
tests/aggregator/: __init__.py  test_pipeline.py
tests/dp/: __init__.py  test_gaussian_mechanism.py  test_integration.py  test_utils.py
tests/integration/: test_aggregator_integration.py
tests/models/: __init__.py  test_trainer.py
tests/smc/: __init__.py  test_paillier.py
tests/utils/: test_data_loader.py
